# multi-agent-dag-scheduling

./: .gitignore  .gitmodules  HANDOFF.md  LICENSE  Makefile  README.md  WSL_RUNS.md  main.py  pyproject.toml
cpp/mlvp/: FULL_THESIS_WSL.md  MLVP_FULL_RUN.md  Makefile
cpp/mlvp/include/mlvp/: cli_utils.hpp  core.hpp
cpp/mlvp/scripts/: run_chapter4_pipeline.sh  run_full_mlvp.sh  run_full_thesis_wsl.sh  run_long_training.sh  run_long_training_wsl.sh  run_mlvp_pipeline.sh
cpp/mlvp/src/: benchmark.cpp  cli_utils.cpp  core.cpp  eval_matrix.cpp  freeze_corpus.cpp  main.cpp  tune_weights.cpp
cpp/mlvp/tests/: smoke_test.cpp
patches/: daggen-linkage-fix.patch
scripts/: preflight.sh  wsl_preflight.sh
src/dag_scheduling/: __init__.py  protocol.py
src/dag_scheduling/algorithms/: ga.py
src/dag_scheduling/algorithms/marl/: train.py
src/dag_scheduling/algorithms/mcts/: search.py  train.py
src/dag_scheduling/algorithms/nn/: model.py  train.py
src/dag_scheduling/baselines/: heuristics.py
src/dag_scheduling/core/: dag.py  eft.py  metrics.py  platform.py  simulator.py
src/dag_scheduling/data/: augmentor.py  generator.py  parser.py
src/dag_scheduling/env/: offline_env.py
src/dag_scheduling/evaluation/: benchmark.py  generate_data.py  milp_reference.py  train_all.py
src/dag_scheduling/milp/: __init__.py  cli.py  model.py  solve.py
tests/: test_generator.py  test_milp.py  test_offline_env.py  test_parser_roundtrip.py  test_protocol.py  test_reference_fidelity.py
