[project]
name = "multi-agent-dag-scheduling"
version = "0.1.0"
description = "Heterogeneous DAG scheduling experiments, baselines, MILP references, and MLVP simulator"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "highspy>=1.14.0",
    "pyomo>=6.10.0",
    "ray[rllib]>=2.54.1",
    "rustworkx[all]>=0.17.1",
    "torch",
]

[project.optional-dependencies]
gurobi = [
    "gurobipy>=13.0.1",
]

[tool.uv]
package = true

[tool.hatch.build]
include = [
    "/LICENSE",
    "/README.md",
    "/main.py",
    "/pyproject.toml",
    "/src/dag_scheduling/**/*.py",
    "/tests/**/*.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dag_scheduling"]
